# rcgo

./: .dir-locals.el  .gitignore  .travis.yml  AUTHORS  Doxyfile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  config.hpp.in  configure  configure.ac  coverage.sh  find_error_code.sh  precommit.sh  setenv.sh.in
build-aux/: catch-driver.sh
dissertation/: proposal.pptx
dissertation/design/: abstract.tex  design.tex  evaluation.tex  implementation.tex  introduction.tex  language.tex  model.tex  paper.aux  paper.blg  paper.dvi  paper.tex  pointer.pic  pointer.tex  runtime.tex
dissertation/dissertation/: #model.tex#  .gitignore  Makefile  abstract.tex  advanced.tex  async_partitions.tex  background.tex  clock_automaton.pic  clock_automaton.tex  clocksys.tex  clocksys_alpha.pic  composition.dia  composition.eps  conclusion.tex  diagram.dia  diagram.eps  evaluation.tex  icc.tex  implementation.tex  introduction.tex  language.tex  model.tex  paper.aux  paper.bbl  paper.bib  paper.blg  paper.dvi  paper.tex  reactive_component.dia  reactive_component.eps  runtime.tex  scheduler.tex  sync_partitions.tex  web_server.dia  web_server.eps  workflow.pic
dissertation/proposal/: background.tex  c.aux  ethernet.pic  model.tex  paper.aux  paper.bbl  paper.blg  paper.dvi  paper.tex  webserver.tex  workflow.tex
dissertation/proposal_addendum/: clocksys.pic  clocksys_alpha.tex  conclusion.tex  ethernet.tex  paper.aux  paper.bbl  paper.blg  paper.dvi  paper.tex  webserver.pic
doc/: EXAMPLES.org  pointers.txt  project_plan.txt  stack.txt
docs/: Gemfile  _config.yml  credits.md  index.html  index.md  manifesto.md  model.md  roadmap.md
docs/_includes/: footer.html  head.html  header.html  link.html  menu.html  nav-footer.html
docs/_layouts/: default.html
docs/_sass/: typography.scss
docs/figures/: reactive_program_paradigm.pic  transformational_program_paradigm.pic
ftest/: Makefile.am  Makefile.in  boolean_type.rc  call.rc  conversion.rc  float_literals.rc  foreign_safe.sh  foreign_safe_getter.rc  foreign_safe_getter_return.rc  foreign_safe_initializer.rc  foreign_safe_pull_port.rc  foreign_safe_pull_port_return.rc  foreign_safe_push_port.rc  foreign_safe_reaction.rc  heap_type.rc  helpers.sh  illegal_composition.sh  illegal_conversion.sh  illegal_conversion1.rc  illegal_conversion2.rc  illegal_conversion3.rc  illegal_conversion4.rc  illegal_octal.rc  illegal_string_literals.sh  imaginary_literals.rc  incompatible_reactions.rc  initializer_args.rc  int_type.rc  integer_literals.rc  logical_operators.rc  mutability_a_dmf.rc  mutability_a_dmi.rc  mutability_a_dmm.rc  mutability_a_mfi.rc  mutability_a_mfs.rc  mutability_a_mii.rc  mutability_a_mis.rc  mutability_a_mmi.rc  mutability_a_mms.rc  mutability_a_rff.rc  (+95 more)
hello/: hello.rcgo
m4/: coverage.m4  lcov.m4
rcgo_root/samples/channel_heap/: channel_heap.rc
rcgo_root/samples/channel_ptr/: channel_ptr.rc
rcgo_root/samples/clock2/: clock2.rc
rcgo_root/samples/clock4/: clock4.rc
rcgo_root/samples/hello_world/: hello_world.rc
rcgo_root/samples/process/: process.rc
rcgo_root/samples/shared_memory_read_write/: shared_memory_read_write.rc
rcgo_root/samples/sntp/: sntp.rc
samples/: Makefile.am  Makefile.in  channel.fbu  channel.rc  channel_heap.fbu  channel_heap.rc  channel_ptr.fbu  channel_ptr.rc  clock.fbu  clock.rc  clock2.fbu  clock2.rc  clock3.rc  clock4.rc  hello_world.fbu  hello_world.rc  ntp.fbu  process.fbu  process.rc  sample1.fbu  sample1.sh  sample10.fbu  sample10.sh  sample11.sh  sample12.fbu  sample12.sh  sample13.fbu  sample13.sh  sample2.sh  sample3.sh  sample4.sh  sample5.fbu  sample5.sh  sample6.fbu  sample6.sh  sample7.fbu  sample7.sh  sample8.sh  sample9.fbu  sample9.sh  (+6 more)
src/: .gitignore  Activation.hpp  Ast.cpp  Ast.hpp  Ast.test.cpp  AstVisitor.cpp  AstVisitor.hpp  AstVisitor.test.cpp  BuiltinFunction.cpp  BuiltinFunction.hpp  ByteStream.cpp  ByteStream.hpp  ByteStream.test.cpp  Callable.cpp  Callable.hpp  Composition.cpp  Composition.hpp  ComputeReceiverAccess.cpp  DigitTable.cpp  Error.cpp  Error.hpp  Error.test.cpp  ErrorReporter.cpp  ErrorReporter.hpp  ErrorReporter.test.cpp  EvaluateStatic.cpp  EvaluateStatic.hpp  ImportLocation.cpp  ImportLocation.hpp  ImportLocation.test.cpp  LetterTable.cpp  Location.cpp  Location.hpp  Location.test.cpp  Makefile.am  Makefile.in  MemoryModel.hpp  Package.cpp  Package.hpp  Package.test.cpp  (+395 more)
test/: Makefile.am  boolean_operators.fbu  boolean_operators.sh  boolean_type.rc  call.rc  change_root-1.fbu  change_root-1.sh  change_root-2.fbu  change_root-2.sh  conversion.rc  float_literals.rc  foreign_safe.sh  foreign_safe_getter.rc  foreign_safe_getter_return.rc  foreign_safe_initializer.rc  foreign_safe_reaction.rc  heap.cpp  heap_type.rc  helpers.sh  illegal_conversion.sh  illegal_conversion1.rc  illegal_conversion2.rc  illegal_conversion3.rc  illegal_rune_literals.sh  imaginary_literals.rc  immutable_leak.fbu  immutable_leak.rc  immutable_leak.sh  immutable_leak2.fbu  immutable_leak2.rc  immutable_leak2.sh  immutable_leak3.fbu  immutable_leak3.rc  immutable_leak3.sh  incompatible_reactions.rc  initializer_args.rc  int_operators.fbu  int_operators.sh  int_type.rc  integer_literals.rc  (+128 more)
unit/: Makefile.am
unit-tests/src/duplicate_const/: duplicate_const.rcgo
utest/: .gitignore  Makefile.am  Makefile.in  action.cpp  arch.cpp  astgen.cpp  astgen.hpp  bind.cpp  builtin_function.cpp  callable.cpp  callable.test  check_all.test  check_types.cpp  enter_identifiers.test  enter_method_identifiers.test  enter_predeclared_identifiers.test  enter_symbols.test  enter_top_level_identifiers.test  error_reporter.cpp  error_reporter.test  expression_value.cpp  expression_value.test  heap.cpp  location.cpp  memory_model.cpp  mock_execution.hpp  node.test  node_cast.cpp  operation.cpp  parameter_list.cpp  polymorphic_function.cpp  polymorphic_function.test  populate_package_block.test  populate_universe_block.test  process_top_level_declarations.test  process_top_level_identifiers.test  process_type.test  process_types_and_constants.test  reaction.cpp  runtime_types.cpp  (+18 more)
(+23 files in other folders)
